<resources>
    <string name="app_name">MeChat</string>
    <string name="new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Log Out</string>
    <string name="dashboard">Dashboard</string>
    <string name="text">Type your text here...</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
