<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar"
        android:background="@color/body">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/header"
            android:textAllCaps="true"
            android:textColor="@color/title"
            android:textStyle="bold"
            android:padding="15dp"
            android:textSize="16dp"
            android:text="@string/new_account"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:layout_marginHorizontal="20dp"
            android:paddingTop="30dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType= "textEmailAddress"
            android:layout_marginHorizontal="20dp"
            android:paddingTop="15dp"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType= "textPassword"
            android:layout_marginHorizontal="20dp"
            android:paddingTop="15dp"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/button1"
            android:textColor="@color/banner"
            android:textStyle="bold"/>


    </LinearLayout>


</RelativeLayout>