<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="30dp"
            app:srcCompat="@mipmap/mechat" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType= "textEmailAddress"
            android:layout_marginHorizontal="50dp"
            android:paddingTop="15dp"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType= "textPassword"
            android:layout_marginHorizontal="50dp"
            android:paddingTop="15dp"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="50dp"
            android:background="@color/button1"
            android:textColor="@color/banner"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            android:layout_marginHorizontal="50dp"
            android:paddingTop="10dp"
            android:textStyle="italic"
            android:textSize="16sp"
            android:textColor="@color/title"
            android:gravity="right"
            android:textAlignment="gravity"
            />

    </LinearLayout>

</RelativeLayout>